syntax = "proto3";

package control;

import "economy.proto";
import "warfare.proto";

service Control {
  rpc Register (RegistrationRequest) returns (RegistrationResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GameStreamRpc(stream UserRequest) returns (stream GameUpdate);
}

message UserRequest {
  oneof request_enum {
    CreateUserRequest create_user = 10000;
    DeleteUserRequest delete_user = 10001;
    economy.GetCorporationRequest get_corporation = 20000;
    warfare.SpawnUnitRequest spawn_unit = 30000;
    warfare.ListUnitsRequest list_unit = 30001;
  }
}

message GameUpdate {
  oneof response_enum {
    CreateUserResponse create_user = 15000;
    DeleteUserResponse delete_user = 15001;
    economy.GetCorporationResponse get_corporation = 25000;
    warfare.SpawnUnitResponse spawn_unit = 35000;
    warfare.ListUnitsResponse list_units = 35001;
  }
}

message RegistrationRequest {
    string username = 1;
    string password = 2;
}

message RegistrationResponse {
    string uuid = 1;
}

// Message for a request to login with a username and password
message LoginRequest {
    string username = 1;  // Username of the player attempting to login
    string password = 2;  // Password of the player attempting to login
}

// Message for the response after a successful login, containing a JWT token
message LoginResponse {
    string jwt = 1;  // JSON Web Token (JWT) for the authenticated session
}

enum UserRole {
  ROLE_UNSPECIFIED = 0;
  ADMIN = 1;
  USER = 2;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  UserRole role = 3;
}

message CreateUserResponse {
  string uuid = 1;
  string name = 2;
  UserRole role = 3;
}

message DeleteUserRequest {
  string uuid = 1;
}

message DeleteUserResponse {}

